--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,11 +2,35 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Webpack App</title>
+
+  <meta charset="UTF-8" />
+  <title>Hearthstone Card Shop</title>
+
 </head>
 
 <body>
-</body>
 
+  <header>
+  </header>
+
+  <main id="spa">
+
+    <section id="start-page">
+
+    </section>
+
+    <section id="set-preview">
+
+    </section>
+
+    <section id="error-page">
+
+    </section>
+
+  </main>
+
+  <footer>
+  </footer>
+
+</body>
 </html>
