--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -10,8 +10,7 @@
     overflow-x: auto;
 }
 
-.display-in-line > * & > * {
-        display: inline !important;
-        list-style-type: disc !important;
-
+.display-in-line > * & > * & > * {
+        display: inline;
+        list-style-type: none;
 }
