--- a/src/app/index.html
+++ b/src/app/index.html
@@ -23,6 +23,10 @@
 
     </section>
 
+    <section id="shopping-cart">
+
+    </section>
+
     <section id="error-page">
         <h1>Error!</h1>
     </section>
