Shopping Cart finished

--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -10,11 +10,11 @@
     overflow-x: auto;
 }
 
-.display-in-line > * & > * & > * {
+.display-in-line > * > * > * {
         display: inline;
         list-style-type: none;
 }
 
-#cart-content > * {
-    border: 1px solid black !important;
-}
+// #cart-content, #cart-btns > * {
+//     border: 1px solid black !important;
+// }
