Began with Checkout template

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -27,8 +27,12 @@
 
     </section>
 
+    <section id="checkout">
+
+    </section>
+
     <section id="error-page">
-        <h1>Error!</h1>
+      <h1>Error!</h1>
     </section>
 
   </main>
@@ -37,4 +41,5 @@
   </footer>
 
 </body>
+
 </html>
