--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -18,3 +18,7 @@
 // #cart-content, #cart-btns > * {
 //     border: 1px solid black !important;
 // }
+
+.confirm-btn.disabled {
+    pointer-events: none;
+}
