Still code refactoring, carousel-controls disappear if there's only one slide

--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -1,6 +1,6 @@
 @import "_variables";
 
-.noDisplay {
+.no-display {
     display: none !important;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .modal-open {
-    header, .filters, .carousel {
+    header, li, h1, .panel-group, .filters, .carousel {
         @extend .blur;
     }
 }
