More Code Refactoring: rendering more abstract

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -16,23 +16,18 @@
   <main id="spa">
 
     <section id="start-page">
-
     </section>
 
-    <section id="set-preview">
-
+    <section id="preview-page">
     </section>
 
-    <section id="shopping-cart">
-
+    <section id="cart-page">
     </section>
 
-    <section id="checkout">
-
+    <section id="checkout-page">
     </section>
 
     <section id="error-page">
-      <h1>Error!</h1>
     </section>
 
   </main>
@@ -45,8 +40,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.js"></script>
-  <!-- Custom Scripts -->
-  <script></script>
+  
 </body>
 
 </html>
