--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -1,7 +1,12 @@
 @import "_variables";
+@import "_fonts";
 
 * {
     list-style-type: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Belwe Bd BT";
 }
 
 article {
@@ -9,6 +14,10 @@ article {
     margin: 1em !important;
     padding: 1em !important;
     border-radius: 0.5em;
+}
+
+.addHeading {
+    font-size: 0.85em !important;
 }
 
 .no-display {
@@ -24,13 +33,17 @@ article {
 }
 
 // Modal
-
 .blur {
     filter: blur(1px);
 }
 
 .modal-open {
-    header, li, h1, .panel-group, .filters, .carousel {
+    header,
+    li,
+    h1,
+    .panel-group,
+    .filters,
+    .carousel {
         @extend .blur;
     }
 }
@@ -47,18 +60,21 @@ article {
     }
     background-color: transparent;
     border-radius: .5em;
-    .modal-header, .modal-footer {
+    .modal-header,
+    .modal-footer {
+        font-family: "Belwe Bd BT";
         background-color: rgba($modalColor1, 0.9);
         border-radius: .5em;
     }
     .flavor {
+        font-family: "ITC Franklin Gothic BookCd", "Franklin Gothic Medium", "Franklin Gothic";
+        font-size: 12pt;
         margin-top: 70px;
         background-color: rgba($modalColor2, 0.9);
     }
 }
 
 // Carousel
-
 .carousel-control {
     background: none !important;
 }
@@ -73,7 +89,6 @@ article {
 }
 
 // Pack-Slider
-
 .start-slider {
     display: inline-flex;
     flex-flow: row wrap;
