@font-face working hack

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,6 +6,18 @@
   <meta charset="UTF-8" />
   <title>Hearthstone Card Shop</title>
 
+  <style type="text/css" media="screen, print">
+    @font-face {
+      font-family: "ITC Franklin Gothic BookCd";
+      src: local("ITC Franklin Gothic BookCd"), url("franklin-book-cond.ttf") format("truetype");
+    }
+
+    @font-face {
+      font-family: "Belwe Bd BT";
+      src: local("Belwe Bd BT"), url("belwe-bold.ttf") format("truetype");
+    }
+  </style>
+
 </head>
 
 <body>
@@ -34,7 +46,7 @@
 
   <footer>
   </footer>
-  
+
 </body>
 
 </html>
