--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -86,7 +86,7 @@ article {
         height: auto;
         display: block;
     }
-    background-color: transparent;
+    background-color: transparent !important;
     border-radius: .5em;
     .modal-header,
     .modal-footer {
