--- a/src/assets/styles/_helper.scss
+++ b/src/assets/styles/_helper.scss
@@ -31,6 +31,15 @@ article {
     }
 }
 
+.btn-group-justified {
+    margin-left: -3em;
+    max-width: 90%;
+}
+
+.start-slider {
+    max-width: 82%;
+}
+
 .form-row {
     display: table;
     &.personal {
